syntax = "proto3";
package en.via.sep3_t3;
option java_multiple_files = true;
option csharp_namespace = "DatabaseRepositories";

// HouseOwner

message HouseOwnerRequest {
  int32 id = 1;
}

message HouseOwnerResponse {
  int32 id = 1;

  string email = 2;
  string password = 3;
  string profilePicture = 4;
  string CPR = 5;
  string phone = 6;
  bool isVerified = 7;
  int32 adminId = 8;

  string address = 9;
  string biography = 10;
}

message CreateHouseOwnerRequest {
  string email = 1;
  string password = 2;
  string profilePicture = 3;
  string CPR = 4;
  string phone = 5;

  string address = 6;
  string biography = 7;
}

message UpdateHouseOwnerRequest {
  int32 id = 1;

  string email = 2;
  string password = 3;
  string profilePicture = 4;
  string CPR = 5;
  string phone = 6;
  bool isVerified = 7;
  int32 adminId = 8;

  string address = 9;
  string biography = 10;
}

message AllHouseOwnersRequest{}

message AllHouseOwnersResponse{
  repeated HouseOwnerResponse houseOwners = 1;
}

service HouseOwnerService {
  rpc GetHouseOwner (HouseOwnerRequest) returns (HouseOwnerResponse);
  rpc GetAllHouseOwners (AllHouseOwnersRequest) returns (AllHouseOwnersResponse);
  rpc CreateHouseOwner (CreateHouseOwnerRequest) returns (HouseOwnerResponse);
  rpc UpdateHouseOwner (UpdateHouseOwnerRequest) returns (HouseOwnerResponse);
  rpc DeleteHouseOwner (HouseOwnerRequest) returns (HouseOwnerResponse);
}

//  HouseSitter

message HouseSitterRequest {
  int32 id = 1;
}

message HouseSitterResponse {
  int32 id = 1;

  string email = 2;
  string password = 3;
  string profilePicture = 4;
  string CPR = 5;
  string phone = 6;
  bool isVerified = 7;
  int32 adminId = 8;

  string experience = 9;
  string biography = 10;
  repeated string pictures = 11;
  repeated string skills = 12;
}

message CreateHouseSitterRequest {
  string email = 1;
  string password = 2;
  string profilePicture = 3;
  string CPR = 4;
  string phone = 5;

  string experience = 6;
  string biography = 7;
  repeated string pictures = 8;
  repeated string skills = 9;
}

message UpdateHouseSitterRequest {
  int32 id = 1;

  string email = 2;
  string password = 3;
  string profilePicture = 4;
  string CPR = 5;
  string phone = 6;
  bool isVerified = 7;
  int32 adminId = 8;

  string experience = 9;
  string biography = 10;
  repeated string pictures = 11;
  repeated string skills = 12;
}

message AllHouseSittersRequest{}

message AllHouseSittersResponse{
  repeated HouseSitterResponse houseSitters = 1;
}

service HouseSitterService {
  rpc GetHouseSitter (HouseSitterRequest) returns (HouseSitterResponse);
  rpc GetAllHouseSitters (AllHouseSittersRequest) returns (AllHouseSittersResponse);
  rpc CreateHouseSitter (CreateHouseSitterRequest) returns (HouseSitterResponse);
  rpc UpdateHouseSitter (UpdateHouseSitterRequest) returns (HouseSitterResponse);
  rpc DeleteHouseSitter (HouseSitterRequest) returns (HouseSitterResponse);
}

//house profile

message HouseProfileRequest {
  int32 id = 1;
}

message HouseProfileResponse {
  int32 id = 1;
  int32 ownerId = 2;
  string description = 3;
  string address = 4;
  string region = 5;
  string city = 6;
  repeated string amenities = 7;
  repeated string chores = 8;
  repeated string rules = 9;
  repeated string pictures = 10;
}

message CreateHouseProfileRequest {
  int32 ownerId = 1;
  string description = 2;
  string address = 3;
  string region = 4;
  string city = 5;
  repeated string amenities = 6;
  repeated string chores = 7;
  repeated string rules = 8;
  repeated string pictures = 9;
}

message UpdateHouseProfileRequest {
  int32 id = 1;
  string description = 2;
  string address = 3;
  string region = 4;
  string city = 5;
  repeated string amenities = 6;
  repeated string chores = 7;
  repeated string rules = 8;
  repeated string pictures = 9;
}

message AllHouseProfilesRequest{}

message AllHouseProfilesResponse{
  repeated HouseProfileResponse houseProfiles = 1;
}

service HouseProfileService {
  rpc GetHouseProfile (HouseProfileRequest) returns (HouseProfileResponse);
  rpc GetAllHouseProfiles (AllHouseProfilesRequest) returns (AllHouseProfilesResponse);
  rpc CreateHouseProfile (CreateHouseProfileRequest) returns (HouseProfileResponse);
  rpc UpdateHouseProfile (UpdateHouseProfileRequest) returns (HouseProfileResponse);
  rpc DeleteHouseProfile (HouseProfileRequest) returns (HouseProfileResponse);
}

//house listing
message HouseListingRequest {
  int32 id = 1;
}

message HouseListingResponse {
  int32 id = 1;
  int32 profileId = 2;
  int64 startDate = 3;
  int64 endDate = 4;
  string status = 5;
}

message CreateHouseListingRequest {
  int32 profileId = 1;
  int64 startDate = 2;
  int64 endDate = 3;
  string status = 4;
}

message UpdateHouseListingRequest {
  int32 id = 1;
  string status = 2;
}

message AllHouseListingsRequest{}

message AllHouseListingsResponse{
  repeated HouseListingResponse houseListings = 1;
}

service HouseListingService {
  rpc GetHouseListing (HouseListingRequest) returns (HouseListingResponse);
  rpc GetAllHouseListings (AllHouseListingsRequest) returns (AllHouseListingsResponse);
  rpc CreateHouseListing (CreateHouseListingRequest) returns (HouseListingResponse);
  rpc UpdateHouseListing (UpdateHouseListingRequest) returns (HouseListingResponse);
  rpc DeleteHouseListing (HouseListingRequest) returns (HouseListingResponse);
}

//application
message ApplicationRequest {
  int32 listing_id = 1;
  int32 sitter_id = 2;
}

message ApplicationResponse {
  int32 listing_id = 1;
  int32 sitter_id = 2;
  string message = 3;
  string status = 4;
  int64 date = 5;
}

message CreateApplicationRequest {
  int32 listing_id = 1;
  int32 sitter_id = 2;
  string message = 3;
  string status = 4;
}

message UpdateApplicationRequest {
  int32 listing_id = 1;
  int32 sitter_id = 2;
  string status = 3;
}

message AllApplicationsRequest{}

message AllApplicationsResponse{
  repeated ApplicationResponse applications = 1;
}

service ApplicationService {
  rpc GetApplication(ApplicationRequest) returns (ApplicationResponse);
  rpc GetAllApplications(AllApplicationsRequest) returns (AllApplicationsResponse);
  rpc CreateApplication(CreateApplicationRequest) returns (ApplicationResponse);
  rpc UpdateApplication(UpdateApplicationRequest) returns (ApplicationResponse);
  rpc DeleteApplication(ApplicationRequest) returns (ApplicationResponse);
}

//house review

message HouseReviewRequest {
  int32 id = 1;
}

message HouseReviewResponse {
  int32 id = 1;
  int32 profile_id = 2;
  int32 sitter_id = 3;
  int32 rating = 4;
  string comment = 5;
  int64 date = 6;
}

message CreateHouseReviewRequest {
  int32 profile_id = 1;
  int32 sitter_id = 2;
  int32 rating = 3;
  string comment = 4;
}

message AllHouseReviewsRequest{}

message AllHouseReviewsResponse{
  repeated HouseReviewResponse houseReviews = 1;
}

service HouseReviewService {
  rpc GetHouseReview(HouseReviewRequest) returns (HouseReviewResponse);
  rpc GetAllHouseReviews(AllHouseReviewsRequest) returns (AllHouseReviewsResponse);
  rpc CreateHouseReview(CreateHouseReviewRequest) returns (HouseReviewResponse);
  rpc DeleteHouseReview(HouseReviewRequest) returns (HouseReviewResponse);
}

//sitter review
message SitterReviewRequest {
  int32 id = 1;
}

message SitterReviewResponse {
  int32 id = 1;
  int32 owner_id = 2;
  int32 sitter_id = 3;
  int32 rating = 4;
  string comment = 5;
  int64 date = 6;
}

message CreateSitterReviewRequest {
  int32 owner_id = 1;
  int32 sitter_id = 2;
  int32 rating = 3;
  string comment = 4;
}

message AllSitterReviewsRequest{}

message AllSitterReviewsResponse{
  repeated SitterReviewResponse sitterReviews = 1;
}

service SitterReviewService {
  rpc GetSitterReview(SitterReviewRequest) returns (SitterReviewResponse);
  rpc GetAllSitterReviews(AllSitterReviewsRequest) returns (AllSitterReviewsResponse);
  rpc CreateSitterReview(CreateSitterReviewRequest) returns (SitterReviewResponse);
  rpc DeleteSitterReview(SitterReviewRequest) returns (SitterReviewResponse);
}

//reports

message ReportRequest {
  int32 id = 1;
}

message ReportResponse {
  int32 id = 1;
  int32 reporting_id = 2;
  int32 reported_id = 3;
  int32 admin_id = 4;
  string comment = 5;
  string status = 6;
  int64 date = 7;
}

message CreateReportRequest {
  int32 reporting_id = 1;
  int32 reported_id = 2;
  int32 admin_id = 3;
  string comment = 4;
}

message UpdateReportRequest {
  int32 id = 1;
  string status = 2;
}

message AllReportsRequest{}

message AllReportsResponse{
  repeated ReportResponse reports = 1;
}

service ReportService {
  rpc GetReport (ReportRequest) returns (ReportResponse);
  rpc GetAllReports (AllReportsRequest) returns (AllReportsResponse);
  rpc CreateReport (CreateReportRequest) returns (ReportResponse);
  rpc UpdateReport (UpdateReportRequest) returns (ReportResponse);
  rpc DeleteReport (ReportRequest) returns (ReportResponse);
}